--- a/孤山梅林.html
+++ b/孤山梅林.html
@@ -6,7 +6,7 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     <meta charset="utf-8">
     <title>孤山梅林</title>
-    <link rel="stylesheet" type="text/css" href="孤山梅林.css">
+    <link rel="stylesheet" type="text/css" href="http://jessicatsengj.github.io/my_web/%E5%AD%A4%E5%B1%B1%E6%A2%85%E6%9E%97.css">
     <link rel="stylesheet" href="animate.min.css">
 </head>
 <body>
@@ -25,7 +25,7 @@
         </div>
     </header>
     <div>
-          <img src="孤山.jpg" class="title">
+          <img src="http://jessicatsengj.github.io/my_web/pictures/%E5%AD%A4%E5%B1%B1.jpg" class="title">
     </div>
     <div class="content">
           <div class="word1">
