--- a/孤山梅林.html
+++ b/孤山梅林.html
@@ -41,7 +41,7 @@
           <div class="word2">
               <h1>LATEST</h1>
               <div class="image">
-                  <img src="昨夜夢落花.jpg" class="picture">
+                  <img src="http://jessicatsengj.github.io/my_web/pictures/%E6%98%A8%E5%A4%9C%E5%A4%A2%E8%90%BD%E8%8A%B1.jpg" class="picture">
                   <p class="description"><a href="file:///Users/jessica/Documents/%E6%88%91%E7%9A%84%E6%96%87%E4%BB%B6/%E6%B5%AA%E4%BF%A0%E5%AC%8C%E5%AE%A2/my%20web/%E6%98%A8%E5%A4%9C%E5%A4%A2%E8%90%BD%E8%8A%B1.html">昨夜夢落花</a></p>
               </div>
               <p>Quisque vel sapien sit amet tellus elementum ultricies. Nunc vel orci turpis. Donec id malesuada metus. Nunc nulla velit, fermentum quis interdum quis, tate etiam commodo lorem ipsum dolor sit amet dolore. 
