--- a/homepage/homepage.html
+++ b/homepage/homepage.html
@@ -21,8 +21,8 @@
 					<img src="./img/犬判slide.png">
 					<img src="./img/浪俠slide.png">
 				</div>
-				<div class="lens"></div>
-				<div class="topic"><img src="./img/孤山字.png"></div>
+				<div class="lens"><img src="./img/mask.png"></div>
+				<!-- <div class="topic"><img src="./img/孤山字.png"></div> -->
 			</div>
 		</header>
 		
@@ -35,11 +35,25 @@
 		</nav>
 		<!-- <div class="bamboo"><img src="./img/forest.png"></div> -->
 
-		<div class="parallax-window" data-parallax="scroll" data-image-src="./img/forest.png"></div>
+		<div class="parallax-window" data-parallax="scroll" data-image-src="./img/bg_black.png"></div>
 		<div class="parallax-window" data-parallax="scroll" data-image-src="./img/forest.png">
 		<img src="./img/孤山詩.png" class="poem">
 		</div>
-		<div class="parallax-window" data-parallax="scroll" data-image-src="./img/落花slide.png"><!-- <p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu.  </p> --></div>
+		<div class="parallax-window" data-parallax="scroll" data-image-src="./img/paperbg.png"><p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu.   </p>
+			<span class="blocks">
+				<img src="./img/block1.png" class="bd">
+				<img src="./img/block1.png" class="bd">
+				<img src="./img/block1.png" class="bd">
+
+				<img src="./img/gd.png" id="gd">
+	 			<img src="./img/id.png" id="id" >
+	 			<img src="./img/wri.png" id="wri">
+	 		</span>
+	 		
+	 			
+	 	
+		</div>
+		
 
 	</body>
 </html>
